Fix spacing

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -168,7 +168,7 @@ div.sticky {
 
     header li a {
         color: white;
-        padding: 5px 15px;
+        padding: 5px 5px;
         text-decoration: none;
         text-transform: uppercase;
     }
